--- a/suedafrika.html
+++ b/suedafrika.html
@@ -32,14 +32,28 @@
       <h2>📸 Galerie</h2>
 
       <div class="gallery">
-        <!-- HIER kommen gleich deine 4 Bilder rein -->
+        <a class="thumb" href="images/IMG_9256.JPEG" target="_blank">
+          <img src="images/IMG_9256.JPEG" alt="Südafrika">
+          <span>Südafrika</span>
+        </a>
+
+        <a class="thumb" href="images/IMG_9327.JPEG" target="_blank">
+          <img src="images/IMG_9327.JPEG" alt="Südafrika">
+          <span>Südafrika</span>
+        </a>
+
+        <a class="thumb" href="images/IMG_9411.JPEG" target="_blank">
+          <img src="images/IMG_9411.JPEG" alt="Südafrika">
+          <span>Südafrika</span>
+        </a>
+
+        <a class="thumb" href="images/IMG_9636.JPEG" target="_blank">
+          <img src="images/IMG_9636.JPEG" alt="Südafrika">
+          <span>Südafrika</span>
+        </a>
       </div>
     </section>
   </div>
 
   <div class="footer">
     © 2026 · Jamson
-  </div>
-
-</body>
-</html>
