--- a/suedafrika.html
+++ b/suedafrika.html
@@ -23,9 +23,7 @@
   <div class="container">
     <section class="hero">
       <h1>Südafrika</h1>
-      <p>
-        Eindrücke, Bilder und Notizen meiner Reise nach Südafrika.
-      </p>
+      <p>Eindrücke, Bilder und Notizen meiner Reise nach Südafrika.</p>
     </section>
 
     <section class="card">
@@ -57,3 +55,7 @@
 
   <div class="footer">
     © 2026 · Jamson
+  </div>
+
+</body>
+</html>
