--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     <div class="grid">
       <section class="card">
         <h2>📍 Aktuelles</h2>
+        <div class="section">
+  <h3>Reisen</h3>
+
+  <div class="gallery">
+    <a class="thumb" href="suedafrika.html">
+      <img src="images/IMG_9256.JPEG" alt="Südafrika">
+      <span>Südafrika</span>
+    </a>
+  </div>
+</div>
+
         <p style="margin:0;color:var(--muted);line-height:1.6;">
           Hier kannst du kurze Notizen zur letzten Reise schreiben: Zeitraum, Ort, Highlights.
           (Später können wir auch eine zweite Seite pro Reise machen.)
