--- a/index.html
+++ b/index.html
@@ -40,14 +40,32 @@
           <h3>Übersicht</h3>
 
           <div class="gallery">
+            <!-- Südafrika (echte Seite) -->
             <a class="thumb" href="suedafrika.html">
               <img src="images/IMG_9256.JPEG" alt="Südafrika">
               <span>Südafrika</span>
             </a>
+
+            <!-- Platzhalter für weitere Reisen -->
+            <a class="thumb" href="#" onclick="return false;">
+              <div>Nächste Reise</div>
+              <span>Coming soon</span>
+            </a>
+
+            <a class="thumb" href="#" onclick="return false;">
+              <div>Nächste Reise</div>
+              <span>Coming soon</span>
+            </a>
+
+            <a class="thumb" href="#" onclick="return false;">
+              <div>Nächste Reise</div>
+              <span>Coming soon</span>
+            </a>
           </div>
 
           <p style="margin:12px 0 0;color:var(--muted);font-size:.95rem;line-height:1.6;">
-            Tipp: Für jede neue Reise kannst du eine eigene Seite erstellen (z. B. <code>italien.html</code>) und hier als Kachel verlinken.
+            Tipp: Für jede neue Reise erstellst du eine Seite (z. B. <code>italien.html</code>) und ersetzt eine „Coming soon“-Kachel
+            durch ein echtes Bild + Link.
           </p>
         </div>
 
@@ -55,7 +73,6 @@
           <h3>Aktuelles</h3>
           <p style="margin:0;color:var(--muted);line-height:1.6;">
             Hier kannst du kurze Notizen zur letzten Reise schreiben: Zeitraum, Ort, Highlights.
-            (Später können wir auch eine Seite pro Reise mit Text + Dokumenten bauen.)
           </p>
         </div>
       </section>
@@ -85,7 +102,7 @@
           <h3>Wie du Dateien hinzufügst</h3>
           <ol style="margin:0;padding-left:18px;color:var(--muted);line-height:1.7;">
             <li>Im Repo: <b>Add file</b> → <b>Upload files</b></li>
-            <li>Für PDFs: Ordner <b>docs</b> (z. B. <code>docs/reiseplan.pdf</code>)</li>
+            <li>Für PDFs: Ordner <b>docs</b></li>
             <li>Für Bilder: Ordner <b>images</b></li>
             <li>Links in HTML anpassen</li>
           </ol>
