--- a/index.html
+++ b/index.html
@@ -33,10 +33,43 @@
     </section>
 
     <div class="grid">
-      <section class="card">
-        <h2>🧭 Reisen</h2>
+<section class="card">
+  <h2>🧭 Reisen</h2>
 
-        <div class="section">
+  <div class="section">
+    <h3>Übersicht</h3>
+
+    <div class="gallery">
+      <!-- Südafrika -->
+      <a class="thumb" href="suedafrika.html">
+        <img src="images/IMG_9256.JPEG" alt="Südafrika">
+        <span>Südafrika</span>
+      </a>
+
+      <!-- USA -->
+      <a class="thumb" href="usa.html">
+        <div>USA</div>
+        <span>USA</span>
+      </a>
+
+      <!-- Platzhalter -->
+      <a class="thumb" href="#" onclick="return false;">
+        <div>Nächste Reise</div>
+        <span>Coming soon</span>
+      </a>
+
+      <a class="thumb" href="#" onclick="return false;">
+        <div>Nächste Reise</div>
+        <span>Coming soon</span>
+      </a>
+    </div>
+
+    <p style="margin:12px 0 0;color:var(--muted);font-size:.95rem;line-height:1.6;">
+      Jede Reise hat eine eigene Seite mit Galerie und optionalen Dokumenten.
+    </p>
+  </div>
+</section>
+
           <h3>Übersicht</h3>
 
           <div class="gallery">
