--- a/index.html
+++ b/index.html
@@ -39,24 +39,27 @@
   <div class="section">
     <h3>Übersicht</h3>
 
-    <div class="gallery">
-      <!-- Südafrika -->
-      <a class="thumb" href="suedafrika.html">
-        <img src="images/IMG_9256.JPEG" alt="Südafrika">
-        <span>Südafrika</span>
-      </a>
+  <div class="gallery">
+  <!-- Südafrika -->
+  <a class="thumb" href="suedafrika.html">
+    <img src="images/IMG_9256.JPEG" alt="Südafrika">
+    <span>Südafrika</span>
+  </a>
 
-      <!-- USA -->
-      <a class="thumb" href="usa.html">
-        <div>USA</div>
-        <span>USA</span>
-      </a>
+  <!-- USA -->
+  <a class="thumb" href="usa.html">
+    <div>USA</div>
+    <span>USA</span>
+  </a>
 
-      <!-- Platzhalter -->
-      <a class="thumb" href="#" onclick="return false;">
-        <div>Nächste Reise</div>
-        <span>Coming soon</span>
-      </a>
+  <!-- Platzhalter -->
+  <a class="thumb" href="#" onclick="return false;">
+    <div>Nächste Reise</div>
+    <span>Coming soon</span>
+  </a>
+</div>
+`
+
 
       <a class="thumb" href="#" onclick="return false;">
         <div>Nächste Reise</div>
