--- a/index.html
+++ b/index.html
@@ -39,25 +39,42 @@
   <div class="section">
     <h3>Übersicht</h3>
 
-  <div class="gallery">
-  <!-- Südafrika -->
-  <a class="thumb" href="suedafrika.html">
-    <img src="images/IMG_9256.JPEG" alt="Südafrika">
-    <span>Südafrika</span>
-  </a>
+    <div class="gallery">
+      <a class="thumb" href="suedafrika.html">
+        <img src="images/IMG_9256.JPEG" alt="Südafrika">
+        <span>Südafrika</span>
+      </a>
 
-  <!-- USA -->
-  <a class="thumb" href="usa.html">
-    <div>USA</div>
-    <span>USA</span>
-  </a>
+      <a class="thumb" href="usa.html">
+        <div>USA</div>
+        <span>USA</span>
+      </a>
 
-  <!-- Platzhalter -->
-  <a class="thumb" href="#" onclick="return false;">
-    <div>Nächste Reise</div>
-    <span>Coming soon</span>
-  </a>
-</div>
+      <a class="thumb" href="#" onclick="return false;">
+        <div>Nächste Reise</div>
+        <span>Coming soon</span>
+      </a>
+
+      <a class="thumb" href="#" onclick="return false;">
+        <div>Nächste Reise</div>
+        <span>Coming soon</span>
+      </a>
+    </div>
+
+    <p style="margin:12px 0 0;color:var(--muted);font-size:.95rem;line-height:1.6;">
+      Jede Reise hat eine eigene Seite mit Galerie und optionalen Dokumenten.
+    </p>
+  </div>
+
+  <div class="section">
+    <h3>Aktuelles</h3>
+    <p style="margin:0;color:var(--muted);line-height:1.6;">
+      Hier kannst du kurze Notizen zur letzten Reise schreiben: Zeitraum, Ort, Highlights.
+    </p>
+  </div>
+</section>
+
+
 `
 
 
@@ -75,18 +92,7 @@
 
           <h3>Übersicht</h3>
 
-          <div class="gallery">
-            <!-- Südafrika (echte Seite) -->
-            <a class="thumb" href="suedafrika.html">
-              <img src="images/IMG_9256.JPEG" alt="Südafrika">
-              <span>Südafrika</span>
-            </a>
-
-            <!-- Platzhalter für weitere Reisen -->
-            <a class="thumb" href="#" onclick="return false;">
-              <div>Nächste Reise</div>
-              <span>Coming soon</span>
-            </a>
+         
 
             <a class="thumb" href="#" onclick="return false;">
               <div>Nächste Reise</div>
