--- a/index.html
+++ b/index.html
@@ -33,67 +33,27 @@
     </section>
 
     <div class="grid">
-<section class="card">
-  <h2>🧭 Reisen</h2>
+      <!-- LINKER KASTEN: Reisen -->
+      <section class="card">
+        <h2>🧭 Reisen</h2>
 
-  <div class="section">
-    <h3>Übersicht</h3>
-
-    <div class="gallery">
-      <a class="thumb" href="suedafrika.html">
-        <img src="images/IMG_9256.JPEG" alt="Südafrika">
-        <span>Südafrika</span>
-      </a>
-
-      <a class="thumb" href="usa.html">
-        <div>USA</div>
-        <span>USA</span>
-      </a>
-
-      <a class="thumb" href="#" onclick="return false;">
-        <div>Nächste Reise</div>
-        <span>Coming soon</span>
-      </a>
-
-      <a class="thumb" href="#" onclick="return false;">
-        <div>Nächste Reise</div>
-        <span>Coming soon</span>
-      </a>
-    </div>
-
-    <p style="margin:12px 0 0;color:var(--muted);font-size:.95rem;line-height:1.6;">
-      Jede Reise hat eine eigene Seite mit Galerie und optionalen Dokumenten.
-    </p>
-  </div>
-
-  <div class="section">
-    <h3>Aktuelles</h3>
-    <p style="margin:0;color:var(--muted);line-height:1.6;">
-      Hier kannst du kurze Notizen zur letzten Reise schreiben: Zeitraum, Ort, Highlights.
-    </p>
-  </div>
-</section>
-
-
-`
-
-
-      <a class="thumb" href="#" onclick="return false;">
-        <div>Nächste Reise</div>
-        <span>Coming soon</span>
-      </a>
-    </div>
-
-    <p style="margin:12px 0 0;color:var(--muted);font-size:.95rem;line-height:1.6;">
-      Jede Reise hat eine eigene Seite mit Galerie und optionalen Dokumenten.
-    </p>
-  </div>
-</section>
-
+        <div class="section">
           <h3>Übersicht</h3>
 
-         
+          <div class="gallery">
+            <!-- Südafrika -->
+            <a class="thumb" href="suedafrika.html">
+              <img src="images/IMG_9256.JPEG" alt="Südafrika">
+              <span>Südafrika</span>
+            </a>
 
+            <!-- USA -->
+            <a class="thumb" href="usa.html">
+              <div>USA</div>
+              <span>USA</span>
+            </a>
+
+            <!-- Platzhalter -->
             <a class="thumb" href="#" onclick="return false;">
               <div>Nächste Reise</div>
               <span>Coming soon</span>
@@ -106,8 +66,7 @@
           </div>
 
           <p style="margin:12px 0 0;color:var(--muted);font-size:.95rem;line-height:1.6;">
-            Tipp: Für jede neue Reise erstellst du eine Seite (z. B. <code>italien.html</code>) und ersetzt eine „Coming soon“-Kachel
-            durch ein echtes Bild + Link.
+            Jede Reise hat eine eigene Seite mit Galerie (und optional Dokumenten).
           </p>
         </div>
 
@@ -119,6 +78,7 @@
         </div>
       </section>
 
+      <!-- RECHTER KASTEN: Dokumente -->
       <aside class="card" id="dokumente">
         <h2>📄 Dokumente</h2>
 
