--- a/usa.html
+++ b/usa.html
@@ -32,11 +32,27 @@
       <h2>📸 Galerie</h2>
 
       <div class="gallery">
-        <!-- Platzhalter – später durch echte Bilder ersetzen -->
-        <a class="thumb" href="#" onclick="return false;">
-          <div>Bild 1</div>
-          <span>Coming soon</span>
-        </a>
+  <a class="thumb" href="images/IMG_9256.JPEG" target="_blank">
+    <img src="images/IMG_9256.JPEG" alt="USA">
+    <span>USA</span>
+  </a>
+
+  <a class="thumb" href="images/IMG_9327.JPEG" target="_blank">
+    <img src="images/IMG_9327.JPEG" alt="USA">
+    <span>USA</span>
+  </a>
+
+  <a class="thumb" href="images/IMG_9411.JPEG" target="_blank">
+    <img src="images/IMG_9411.JPEG" alt="USA">
+    <span>USA</span>
+  </a>
+
+  <a class="thumb" href="images/IMG_9636.JPEG" target="_blank">
+    <img src="images/IMG_9636.JPEG" alt="USA">
+    <span>USA</span>
+  </a>
+</div>
+
 
         <a class="thumb" href="#" onclick="return false;">
           <div>Bild 2</div>
