--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
               <span>Südafrika</span>
             </a>
 
-            <!-- USA -->
-            <a class="thumb" href="usa.html">
-              <div>USA</div>
-              <span>USA</span>
-            </a>
+           <!-- USA -->
+<a class="thumb" href="usa.html">
+  <img src="images/IMG_4816.JPEG" alt="USA">
+  <span>USA</span>
+</a>
+
 
             <!-- Platzhalter -->
             <a class="thumb" href="#" onclick="return false;">
