--- a/usa.html
+++ b/usa.html
@@ -31,31 +31,20 @@
     <section class="card">
       <h2>📸 Galerie</h2>
 
-      <a class="thumb" href="images/IMG_4815.JPEG" target="_blank">
-  <img src="images/IMG_4815.JPEG" alt="USA">
-  <span>USA</span>
-</a>
-
-<a class="thumb" href="images/IMG_4816.JPEG" target="_blank">
-  <img src="images/IMG_4816.JPEG" alt="USA">
-  <span>USA</span>
-</a>
-
-<a class="thumb" href="images/IMG_5567.JPEG" target="_blank">
-  <img src="images/IMG_5567.JPEG" alt="USA">
-  <span>USA</span>
-</a>
-
-
-
-        <a class="thumb" href="#" onclick="return false;">
-          <div>Bild 2</div>
-          <span>Coming soon</span>
+      <div class="gallery">
+        <a class="thumb" href="images/IMG_4815.JPEG" target="_blank">
+          <img src="images/IMG_4815.JPEG" alt="USA">
+          <span>USA</span>
         </a>
 
-        <a class="thumb" href="#" onclick="return false;">
-          <div>Bild 3</div>
-          <span>Coming soon</span>
+        <a class="thumb" href="images/IMG_4816.JPEG" target="_blank">
+          <img src="images/IMG_4816.JPEG" alt="USA">
+          <span>USA</span>
+        </a>
+
+        <a class="thumb" href="images/IMG_5567.JPEG" target="_blank">
+          <img src="images/IMG_5567.JPEG" alt="USA">
+          <span>USA</span>
         </a>
       </div>
     </section>
